--- a/pics-paintings.html
+++ b/pics-paintings.html
@@ -120,7 +120,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">19 / 150</div> <img src="pics-paintings/chess3-36x36.jpg" style="width:100%"> <div class="text">chess3 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">20 / 150</div> <img src="pics-paintings/close-up-28x22.png" style="width:100%"> <div class="text">close-up 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">21 / 150</div> <img src="pics-paintings/collatz-conjecture-60x40.jpg" style="width:100%"> <div class="text">collatz-conjecture 60x40</div> </div>
-<div class="mySlides fade"> <div class="numbertext">22 / 150</div> <img src="pics-paintings/consistency-of-arithmetic-48x24.jpg" style="width:100%"> <div class="text">consistency-of-arithmetic-48x24</div> </div>
+<div class="mySlides fade"> <div class="numbertext">22 / 150</div> <img src="pics-paintings/consistency-of-arithmetic-48x24.jpg" style="width:100%"> <div class="text">consistency-of-arithmetic 48x24</div> </div>
 <div class="mySlides fade"> <div class="numbertext">23 / 150</div> <img src="pics-paintings/cool-britannia-40x30.jpg" style="width:100%"> <div class="text">cool-britannia 40x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">24 / 150</div> <img src="pics-paintings/copiale-cipher-36x36.jpg" style="width:100%"> <div class="text">copiale-cipher 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">25 / 150</div> <img src="pics-paintings/coprime-36x36.jpg" style="width:100%"> <div class="text">coprime 36x36</div> </div>
@@ -134,7 +134,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">33 / 150</div> <img src="pics-paintings/defend-cuba-sovereignty-1962-30x40.jpg" style="width:100%"> <div class="text">defend-cuba-sovereignty-1962 30x40</div> </div>
 <div class="mySlides fade"> <div class="numbertext">34 / 150</div> <img src="pics-paintings/defense-mechanism-12x36.jpg" style="width:100%"> <div class="text">defense-mechanism 12x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">35 / 150</div> <img src="pics-paintings/doge-30x30.jpg" style="width:100%"> <div class="text">doge 30x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">36 / 150</div> <img src="pics-paintings/do-good-research1-48x30.jpg" style="width:100%"> <div class="text">do-good-research1-48x30</div> </div>
+<div class="mySlides fade"> <div class="numbertext">36 / 150</div> <img src="pics-paintings/do-good-research1-48x30.jpg" style="width:100%"> <div class="text">do-good-research1 48x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">37 / 150</div> <img src="pics-paintings/do-good-research2-36x24.jpg" style="width:100%"> <div class="text">do-good-research2 36x24</div> </div>
 <div class="mySlides fade"> <div class="numbertext">38 / 150</div> <img src="pics-paintings/drama-60x60.jpg" style="width:100%"> <div class="text">drama 60x60</div> </div>
 <div class="mySlides fade"> <div class="numbertext">39 / 150</div> <img src="pics-paintings/elvis-24x36.jpg" style="width:100%"> <div class="text">elvis 24x36</div> </div>
@@ -209,7 +209,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">108 / 150</div> <img src="pics-paintings/selfie-36x36.jpg" style="width:100%"> <div class="text">selfie 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">109 / 150</div> <img src="pics-paintings/shannon-30x30.jpg" style="width:100%"> <div class="text">shannon 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">110 / 150</div> <img src="pics-paintings/she-did-the-math-60x40.jpg" style="width:100%"> <div class="text">she-did-the-math 60x40</div> </div>
-<div class="mySlides fade"> <div class="numbertext">111 / 150</div> <img src="pics-paintings/shutters-48x24.jpg" style="width:100%"> <div class="text">shutters-48x24</div> </div>
+<div class="mySlides fade"> <div class="numbertext">111 / 150</div> <img src="pics-paintings/shutters-48x24.jpg" style="width:100%"> <div class="text">shutters 48x24</div> </div>
 <div class="mySlides fade"> <div class="numbertext">112 / 150</div> <img src="pics-paintings/snow-36x36.jpg" style="width:100%"> <div class="text">snow 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">113 / 150</div> <img src="pics-paintings/snowden-28x22.jpg" style="width:100%"> <div class="text">snowden 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">114 / 150</div> <img src="pics-paintings/snowprints-30x30.jpg" style="width:100%"> <div class="text">snowprints 30x30</div> </div>
@@ -239,7 +239,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">138 / 150</div> <img src="pics-paintings/waka-waka-28x22.jpg" style="width:100%"> <div class="text">waka-waka 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">139 / 150</div> <img src="pics-paintings/weaver-30x30.jpg" style="width:100%"> <div class="text">weaver 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">140 / 150</div> <img src="pics-paintings/welcome-success-of-first-bomb-40x30.jpg" style="width:100%"> <div class="text">welcome-success-of-first-bomb 40x30</div> </div>
-<div class="mySlides fade"> <div class="numbertext">141 / 150</div> <img src="pics-paintings/why-is-my-boyfriend-in-miami-48x60.jpg" style="width:100%"> <div class="text">why-is-my-boyfriend-in-miami-48x60</div> </div>
+<div class="mySlides fade"> <div class="numbertext">141 / 150</div> <img src="pics-paintings/why-is-my-boyfriend-in-miami-48x60.jpg" style="width:100%"> <div class="text">why-is-my-boyfriend-in-miami 48x60</div> </div>
 <div class="mySlides fade"> <div class="numbertext">142 / 150</div> <img src="pics-paintings/wolverine-30x30.jpg" style="width:100%"> <div class="text">wolverine 30x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">143 / 150</div> <img src="pics-paintings/wonderful-36x36.jpg" style="width:100%"> <div class="text">wonderful 36x36</div> </div>
 <div class="mySlides fade"> <div class="numbertext">144 / 150</div> <img src="pics-paintings/work-like-a-dog-36x36.jpg" style="width:100%"> <div class="text">work-like-a-dog 36x36</div> </div>
@@ -248,7 +248,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade"> <div class="numbertext">147 / 150</div> <img src="pics-paintings/wwrd-28x22.jpg" style="width:100%"> <div class="text">wwrd 28x22</div> </div>
 <div class="mySlides fade"> <div class="numbertext">148 / 150</div> <img src="pics-paintings/xavi-40x30.jpg" style="width:100%"> <div class="text">xavi 40x30</div> </div>
 <div class="mySlides fade"> <div class="numbertext">149 / 150</div> <img src="pics-paintings/yes3-24x24.jpg" style="width:100%"> <div class="text">yes3 24x24</div> </div>
-<div class="mySlides fade"> <div class="numbertext">150 / 150</div> <img src="pics-paintings/you-said-all-the-wrong-things-30x15.jpg" style="width:100%"> <div class="text">you-said-all-the-wrong-things-30x15</div> </div>
+<div class="mySlides fade"> <div class="numbertext">150 / 150</div> <img src="pics-paintings/you-said-all-the-wrong-things-30x15.jpg" style="width:100%"> <div class="text">you-said-all-the-wrong-things 30x15</div> </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
 <a class="next" onclick="plusSlides(1)">❯</a>
