--- a/pics-paintings.html
+++ b/pics-paintings.html
@@ -262,6 +262,151 @@ img {vertical-align: middle;}
   <span class="dot" onclick="currentSlide(3)"></span> 
   <span class="dot" onclick="currentSlide(4)"></span> 
   <span class="dot" onclick="currentSlide(5)"></span> 
+  <span class="dot" onclick="currentSlide(6)"></span> 
+  <span class="dot" onclick="currentSlide(7)"></span> 
+  <span class="dot" onclick="currentSlide(8)"></span> 
+  <span class="dot" onclick="currentSlide(9)"></span> 
+  <span class="dot" onclick="currentSlide(10)"></span> 
+  <span class="dot" onclick="currentSlide(11)"></span> 
+  <span class="dot" onclick="currentSlide(12)"></span> 
+  <span class="dot" onclick="currentSlide(13)"></span> 
+  <span class="dot" onclick="currentSlide(14)"></span> 
+  <span class="dot" onclick="currentSlide(15)"></span> 
+  <span class="dot" onclick="currentSlide(16)"></span> 
+  <span class="dot" onclick="currentSlide(17)"></span> 
+  <span class="dot" onclick="currentSlide(18)"></span> 
+  <span class="dot" onclick="currentSlide(19)"></span> 
+  <span class="dot" onclick="currentSlide(20)"></span> 
+  <span class="dot" onclick="currentSlide(21)"></span> 
+  <span class="dot" onclick="currentSlide(22)"></span> 
+  <span class="dot" onclick="currentSlide(23)"></span> 
+  <span class="dot" onclick="currentSlide(24)"></span> 
+  <span class="dot" onclick="currentSlide(25)"></span> 
+  <span class="dot" onclick="currentSlide(26)"></span> 
+  <span class="dot" onclick="currentSlide(27)"></span> 
+  <span class="dot" onclick="currentSlide(28)"></span> 
+  <span class="dot" onclick="currentSlide(29)"></span> 
+  <span class="dot" onclick="currentSlide(30)"></span> 
+  <span class="dot" onclick="currentSlide(31)"></span> 
+  <span class="dot" onclick="currentSlide(32)"></span> 
+  <span class="dot" onclick="currentSlide(33)"></span> 
+  <span class="dot" onclick="currentSlide(34)"></span> 
+  <span class="dot" onclick="currentSlide(35)"></span> 
+  <span class="dot" onclick="currentSlide(36)"></span> 
+  <span class="dot" onclick="currentSlide(37)"></span> 
+  <span class="dot" onclick="currentSlide(38)"></span> 
+  <span class="dot" onclick="currentSlide(39)"></span> 
+  <span class="dot" onclick="currentSlide(40)"></span>  
+  <span class="dot" onclick="currentSlide(41)"></span> 
+  <span class="dot" onclick="currentSlide(42)"></span> 
+  <span class="dot" onclick="currentSlide(43)"></span> 
+  <span class="dot" onclick="currentSlide(44)"></span> 
+  <span class="dot" onclick="currentSlide(45)"></span> 
+  <span class="dot" onclick="currentSlide(46)"></span> 
+  <span class="dot" onclick="currentSlide(47)"></span> 
+  <span class="dot" onclick="currentSlide(48)"></span> 
+  <span class="dot" onclick="currentSlide(49)"></span> 
+  <span class="dot" onclick="currentSlide(50)"></span> 
+  <span class="dot" onclick="currentSlide(51)"></span> 
+  <span class="dot" onclick="currentSlide(52)"></span> 
+  <span class="dot" onclick="currentSlide(53)"></span> 
+  <span class="dot" onclick="currentSlide(54)"></span> 
+  <span class="dot" onclick="currentSlide(55)"></span> 
+  <span class="dot" onclick="currentSlide(56)"></span> 
+  <span class="dot" onclick="currentSlide(57)"></span> 
+  <span class="dot" onclick="currentSlide(58)"></span> 
+  <span class="dot" onclick="currentSlide(59)"></span> 
+  <span class="dot" onclick="currentSlide(60)"></span> 
+  <span class="dot" onclick="currentSlide(61)"></span> 
+  <span class="dot" onclick="currentSlide(62)"></span> 
+  <span class="dot" onclick="currentSlide(63)"></span> 
+  <span class="dot" onclick="currentSlide(64)"></span> 
+  <span class="dot" onclick="currentSlide(65)"></span> 
+  <span class="dot" onclick="currentSlide(66)"></span> 
+  <span class="dot" onclick="currentSlide(67)"></span> 
+  <span class="dot" onclick="currentSlide(68)"></span> 
+  <span class="dot" onclick="currentSlide(69)"></span> 
+  <span class="dot" onclick="currentSlide(70)"></span> 
+  <span class="dot" onclick="currentSlide(71)"></span> 
+  <span class="dot" onclick="currentSlide(72)"></span> 
+  <span class="dot" onclick="currentSlide(73)"></span> 
+  <span class="dot" onclick="currentSlide(74)"></span> 
+  <span class="dot" onclick="currentSlide(75)"></span> 
+  <span class="dot" onclick="currentSlide(76)"></span> 
+  <span class="dot" onclick="currentSlide(77)"></span> 
+  <span class="dot" onclick="currentSlide(78)"></span> 
+  <span class="dot" onclick="currentSlide(79)"></span> 
+  <span class="dot" onclick="currentSlide(80)"></span>   
+  <span class="dot" onclick="currentSlide(81)"></span> 
+  <span class="dot" onclick="currentSlide(82)"></span> 
+  <span class="dot" onclick="currentSlide(83)"></span> 
+  <span class="dot" onclick="currentSlide(84)"></span> 
+  <span class="dot" onclick="currentSlide(85)"></span> 
+  <span class="dot" onclick="currentSlide(86)"></span> 
+  <span class="dot" onclick="currentSlide(87)"></span> 
+  <span class="dot" onclick="currentSlide(88)"></span> 
+  <span class="dot" onclick="currentSlide(89)"></span> 
+  <span class="dot" onclick="currentSlide(90)"></span> 
+  <span class="dot" onclick="currentSlide(91)"></span> 
+  <span class="dot" onclick="currentSlide(92)"></span> 
+  <span class="dot" onclick="currentSlide(93)"></span> 
+  <span class="dot" onclick="currentSlide(94)"></span> 
+  <span class="dot" onclick="currentSlide(95)"></span> 
+  <span class="dot" onclick="currentSlide(96)"></span> 
+  <span class="dot" onclick="currentSlide(97)"></span> 
+  <span class="dot" onclick="currentSlide(98)"></span> 
+  <span class="dot" onclick="currentSlide(99)"></span> 
+  <span class="dot" onclick="currentSlide(100)"></span> 
+  <span class="dot" onclick="currentSlide(101)"></span> 
+  <span class="dot" onclick="currentSlide(102)"></span> 
+  <span class="dot" onclick="currentSlide(103)"></span> 
+  <span class="dot" onclick="currentSlide(104)"></span> 
+  <span class="dot" onclick="currentSlide(105)"></span> 
+  <span class="dot" onclick="currentSlide(106)"></span> 
+  <span class="dot" onclick="currentSlide(107)"></span> 
+  <span class="dot" onclick="currentSlide(108)"></span> 
+  <span class="dot" onclick="currentSlide(109)"></span> 
+  <span class="dot" onclick="currentSlide(110)"></span> 
+  <span class="dot" onclick="currentSlide(111)"></span> 
+  <span class="dot" onclick="currentSlide(112)"></span> 
+  <span class="dot" onclick="currentSlide(113)"></span> 
+  <span class="dot" onclick="currentSlide(114)"></span> 
+  <span class="dot" onclick="currentSlide(115)"></span> 
+  <span class="dot" onclick="currentSlide(116)"></span> 
+  <span class="dot" onclick="currentSlide(117)"></span> 
+  <span class="dot" onclick="currentSlide(118)"></span> 
+  <span class="dot" onclick="currentSlide(119)"></span> 
+  <span class="dot" onclick="currentSlide(120)"></span> 
+  <span class="dot" onclick="currentSlide(121)"></span> 
+  <span class="dot" onclick="currentSlide(122)"></span> 
+  <span class="dot" onclick="currentSlide(123)"></span> 
+  <span class="dot" onclick="currentSlide(124)"></span> 
+  <span class="dot" onclick="currentSlide(125)"></span> 
+  <span class="dot" onclick="currentSlide(126)"></span> 
+  <span class="dot" onclick="currentSlide(127)"></span> 
+  <span class="dot" onclick="currentSlide(128)"></span> 
+  <span class="dot" onclick="currentSlide(129)"></span> 
+  <span class="dot" onclick="currentSlide(130)"></span> 
+  <span class="dot" onclick="currentSlide(131)"></span> 
+  <span class="dot" onclick="currentSlide(132)"></span> 
+  <span class="dot" onclick="currentSlide(133)"></span> 
+  <span class="dot" onclick="currentSlide(134)"></span> 
+  <span class="dot" onclick="currentSlide(135)"></span> 
+  <span class="dot" onclick="currentSlide(136)"></span> 
+  <span class="dot" onclick="currentSlide(137)"></span> 
+  <span class="dot" onclick="currentSlide(138)"></span> 
+  <span class="dot" onclick="currentSlide(139)"></span> 
+  <span class="dot" onclick="currentSlide(140)"></span>  
+  <span class="dot" onclick="currentSlide(141)"></span> 
+  <span class="dot" onclick="currentSlide(142)"></span> 
+  <span class="dot" onclick="currentSlide(143)"></span> 
+  <span class="dot" onclick="currentSlide(144)"></span> 
+  <span class="dot" onclick="currentSlide(145)"></span> 
+  <span class="dot" onclick="currentSlide(146)"></span> 
+  <span class="dot" onclick="currentSlide(147)"></span> 
+  <span class="dot" onclick="currentSlide(148)"></span> 
+  <span class="dot" onclick="currentSlide(149)"></span> 
+  <span class="dot" onclick="currentSlide(150)"></span> 
 </div>
 
 <script>
