--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 <p>
 <A HREF="pics-cooking">Lockdown food</A> and <A HREF="pics-ballona">view from a bridge</A>.
 </p>
+ 
+<p>
+Are large language models <A HREF="papers/sentient.html">sentient</A>?
+</p>
 
 <p>
 <A HREF="inexplicably.html">An amicable story</A>.
