--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@ vita</A>.
 </P>
 
 <p>
+I wrote two new books over the last year, both available on Amazon:
+<a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">MATH KOOK</a>
+and
+<a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">IN THEORY</a>.
+Get 'em!
+</p>
+
+<p>
 Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
 </p>
 
