--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@ vita</A>.
 </P>
 
 <p>
- <img src="extra/new-en.gif">  I wrote two new books over the last year, both available on Amazon:
-<a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">MATH KOOK</a>
-and
-<a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">IN THEORY</a>.
-Get 'em!
+ <img src="extra/new-en.gif">  Two new books for you:
+<a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">Math Kook</a>
+and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">In Theory</a>.
+ (Associated websites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
 </p>
 
 <p>
