--- a/index.html
+++ b/index.html
@@ -35,12 +35,25 @@ My <A HREF="vita/CV_Knight.pdf">
 vita</A>.
 </P>
 
+ <!--
 <p>
  <img src="extra/new-en.gif">  Two new books for you:
 <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">Math Kook</a>
 and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">In Theory</a>.
  (Associated websites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
 </p>
+-->
+ 
+<p>
+<img src="extra/new-en.gif">  Two new books to click on:
+
+<p><a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
+  <img align="CENTER" src="mk-cover-pg.jpg" /> 
+    </a></p>
+ 
+ <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
+<img align="CENTER" src="it-li-final.jpeg" /> 
+  </a></p>
 
 <p>
 Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
