--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 <p>
 <img src="extra/new-en.gif">  Two new books to click on:
 
-<p><a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
+<p>
+ <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
   <img WIDTH=300  src="mk-cover-pg.jpg" /> 
-    </a>  &nbsp; &nbsp;
- 
+  </a>  &nbsp; &nbsp;
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
-<img WIDTH=200  src="it-li-final.jpeg" /> 
+  <img WIDTH=200  src="it-li-final.jpeg" /> 
   </a></p>
 
 (Plus sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
