--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
   <img WIDTH=300  src="mk-cover-pg.jpg" /> 
-  </a>  &nbsp; &nbsp;
+  </a>
+&nbsp; &nbsp;
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
   <img WIDTH=200  src="it-li-final.jpeg" /> 
-  </a></p>
+  </a>
 
+<p>
 (Plus sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
  
 <p>
 Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
-</p>
-
 
 <p>
 If you don't want to read this whole page, here's a quick
