--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
-  <img WIDTH=200 src="mk-cover-pg.jpg"> 
-  </a>
+  <img WIDTH=200 src="mk-cover-pg.jpg"></a>
 &nbsp; &nbsp;
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
-  <img WIDTH=300 src="it-li-final.jpeg"> 
-  </a>
+  <img WIDTH=300 src="it-li-final.jpeg"></a>
 
 <p>
 (Plus auxiliary sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
