--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 
  
 <p>
-Let's solve the <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">3n+1</a> problem!
+The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
 <p>
 If you don't want to read this whole page, here's a quick
