--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 -->
  
 <p>
-<img src="extra/new-en.gif">  Two new books to click on:
+<img src="extra/new-en.gif">  Two books to click on:
 
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
@@ -56,13 +56,12 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
   <img WIDTH=300 src="it-li-final.jpeg"></a>
 
+<!--
 <p>
 (Plus auxiliary sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
-
+-->
 
  
-<p>
-The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
 <p>
 If you don't want to read this whole page, here's a quick
@@ -83,6 +82,9 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 <p>
 <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
 </p>
+
+ <p>
+The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
 <p>
 <A HREF="pics-cooking">Lockdown food</A> and <A HREF="pics-ballona">view from a bridge</A>.
