--- a/index.html
+++ b/index.html
@@ -1287,6 +1287,9 @@ Artificial Intelligence, Second Edition (E. Rich and K. Knight),
 McGraw-Hill Book Company, 1991.
 </P>
 <P>
+"Automated Rationalization" (K. Knight and Y. Gil), Proceedings of the Workshop on Multistrategy Learning (Harpers Ferry, WV), 1991.
+</P>
+<P>
 "Connectionist Ideas and Algorithms", Communications of the ACM, 
 33(11), November, 1990.
 <A HREF="papers/p58-knight.pdf">Get paper in PDF</A>.</P>
