--- a/index.html
+++ b/index.html
@@ -1289,6 +1289,17 @@ McGraw-Hill Book Company, 1991.
 <P>
 "Automated Rationalization" (K. Knight and Y. Gil), Proceedings of the Workshop on Multistrategy Learning (Harpers Ferry, WV), 1991.
 </P>
+ 
+<p>
+Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporary take: 
+"Yet another interesting information relative to explanations in the symbolic/neural debate is that some people at CMU built such a mixed system. 
+The NN was used to take decisions, and the symbolic part was for providing explanations. 
+The explanations were adapted, that is to say bent to fit the answer of the NN (Knight and Gil, 1991). 
+The symbolic system was thus a sophist able to explain a result, but also its contrary. 
+This interesting experiment was acknowledged with much hostility by the AI community because of its sophistry. 
+It illustrates well however one way for the neural and the symbolic to share their work."
+Love it!
+ 
 <P>
 "Connectionist Ideas and Algorithms", Communications of the ACM, 
 33(11), November, 1990.
