--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 -->
  
 <p>
-<img src="extra/new-en.gif">  Two books to click on:
+ Two new books to click on:
 
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
@@ -1291,7 +1291,7 @@ McGraw-Hill Book Company, 1991.
 </P>
  
 <p>
-Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporary take: 
+<img src="extra/new-en.gif">  Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporary take: 
 "Yet another interesting information relative to explanations in the symbolic/neural debate is that some people at CMU built such a mixed system. 
 The NN was used to take decisions, and the symbolic part was for providing explanations. 
 The explanations were adapted, that is to say bent to fit the answer of the NN (Knight and Gil, 1991). 
