--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@ Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</
 Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
-If I could change my profession, I would like to try naval attach&eacute.
+If I could change my profession, I would like to try naval attach&eacute.  
+(Update: Turns out there is a <b>lot</b> of paperwork involved in becoming a naval attach&eacute.
+Alternately, I thought about taking a job as well-known American dissident, 
+but apparently that position is occupied. Another appealing possibility is "man of letters".)
 
 <p>
 My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
