--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
-  <img WIDTH=200 src="mk-cover-pg.jpg"></a>
+  <img WIDTH=100 src="mk-cover-pg.jpg"></a>
 &nbsp; &nbsp;
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
-  <img WIDTH=300 src="it-li-final.jpeg"></a>
+  <img WIDTH=150 src="it-li-final.jpeg"></a>
 
 <!--
 <p>
@@ -113,9 +113,9 @@ Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute.  
-(Update: Turns out there is a <b>lot</b> of paperwork involved in becoming a naval attach&eacute.
-Alternately, I thought about taking a job as well-known American dissident, 
-but apparently that position is occupied. Another appealing possibility is "man of letters".)
+Update: Turns out there is <b>a lot</b> of paperwork involved in becoming a naval attach&eacute.
+Alternately, I thought about taking a job as well-known American dissident 
+but apparently that position is occupied. Another appealing possibility is "man of letters".
 
 <p>
 My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
