--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5y
 </p>
  
 <p>
-Are large language models <A HREF="papers/sentient.html">sentient</A>?
+Leaked Russian <a><href="pictures/IMG_1944.MOV">war plans</a> ... what could go wrong?
 </p>
 
 <p>
