--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5y
 </p>
  
 <p>
-Leaked Russian <a href="pictures/leaked-russian-war-plans.mp4">war plans</a> ... what could go wrong?
+Leaked Russian <a href="pictures/lrwp2.mp4">war plans</a> ... what could go wrong?
 </p>
 
 <p>
