--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 (Plus auxiliary sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
 -->
 
- 
-
 <p>
-If you don't want to read this whole page, here's a quick
+<a href="math-kook-sample-chapters.pdf">Sample chapters</a> from MATH KOOK.
+ 
+<p>
+If you don't want to read this whole webpage, here's a quick
 <A HREF="pictures/kk-cloud.png">
 summary</A>.
 </p>
