--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ vita</A>.
 <!--
 
 <p>
- <img src="extra/new-en.gif">  Two new books for you:
+New books for you:
 <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">Math Kook</a>
 and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">In Theory</a>.
  (Associated websites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
@@ -47,8 +47,9 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 -->
  
 <p>
- Two new books to click on:
+Number theory book: <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">Math Kook</a> (<a href="math-kook-sample-chapters.pdf">sample chapters</a>).
 
+ <!--
 <p>
  <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
   <img WIDTH=100 src="mk-cover-pg.jpg"></a>
@@ -56,13 +57,13 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
  <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
   <img WIDTH=150 src="it-li-final.jpeg"></a>
 
-<!--
 <p>
 (Plus auxiliary sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
--->
+
 
 <p>
 <a href="math-kook-sample-chapters.pdf">Sample chapters</a> from MATH KOOK.
+ -->
  
 <p>
 If you don't want to read this whole webpage, here's a quick
