--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@ document.write("kevin.crawfor"+"d.knight@gm"+"ail.com")
 Recent positions: Chief Scientist for NLP (Didi Global), Professor of Computer Science (USC).
 
 <P>
-Research interests include: artificial intelligence, natural language 
-processing, machine translation, dialog processing, automata theory, decipherment.
+Research interests include: artificial intelligence, natural language processing, machine translation, dialog processing, automata theory, number theory, decipherment of historical manuscripts.
 </P>
 
 <P>
