--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 -->
  
 <p>
-I wrote a <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
+I recently wrote a <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
 
  <!--
 <p>
