--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ I think Gary Shteyngart is funny.
 <p><b>Greatest Hits, vol. 1</b></p>
 
 <P>
-"Connectionist Ideas and Algorithms", Communications of the ACM, 33(11), November, 1990.
+"Connectionist Ideas and Algorithms" Communications of the ACM, 33(11), November, 1990.
 <A HREF="papers/p58-knight.pdf">Get paper in PDF</A>.
  
 <br>
@@ -300,7 +300,7 @@ Proceedings of the ACL Workshop on Unsupervised Learning in Natural Language Pro
 <A HREF="http://www.aclweb.org/anthology/W/W99/W99-0906.pdf">Get paper in PDF</A>.
 
 <br>
-"A Statistical MT Tutorial Workbook," August 1999.
+"A Statistical MT Tutorial Workbook" August 1999.
 <A HREF="papers/wkbk.pdf">Get paper in PDF.</A>
 
 <br>
@@ -320,14 +320,14 @@ Proc. of the Conference of the Association for Computational Linguistics (ACL), 
 <A HREF="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf">Get paper in PDF</A>. 
  
 <br>
-"The Copiale Cipher,"
+"The Copiale Cipher"
 (K. Knight, B. Megyesi, and C. Schaefer), ACL Workshop on Building and Using Comparable Corpora (BUCC), 2011.
 <A HREF="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf">Get paper in PDF</A>.
   
 <p><b>Greatest Hits, vol. 2</b></p>
 
 <p>
-"Deciphering Foreign Language,"
+"Deciphering Foreign Language"
 (S. Ravi and K. Knight), Proc. ACL, 2011.
 <A HREF="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf">Get paper in PDF</A>.
 
@@ -746,78 +746,78 @@ Proc. Linguistic Annotation Workshop (LAW VII-ID), ACL, 2013.
 <a href="http://www.aclweb.org/anthology/W13-2322">Get paper in PDF</a>.
 
 <p>
-"Parsing Graphs with Hyperedge Replacement Grammars,"
+"Parsing Graphs with Hyperedge Replacement Grammars"
 (D. Chiang, J. Andreas, D. Bauer, K. M. Hermann, B. Jones, and K. Knight),
 Proc. ACL, 2013.
 <a href="http://aclweb.org/anthology/P/P13/P13-1091.pdf">Get paper in PDF</a>.
 
 <p>
-"Smatch: an Evaluation Metric for Semantic Feature Structures,"
+"Smatch: an Evaluation Metric for Semantic Feature Structures"
 (S. Cai and K. Knight), Proc. ACL, 2013.
 <a href="http://www.aclweb.org/anthology/P13-2131.pdf">Get paper in PDF</a>.
 
 <p>
-"Curating and Contextualizing Twitter Stories to Assist with Social Newsgathering," (A. Zubiaga, H. Ji, and K. Knight), Proc. IUI, 2013.
+"Curating and Contextualizing Twitter Stories to Assist with Social Newsgathering" (A. Zubiaga, H. Ji, and K. Knight), Proc. IUI, 2013.
 <A HREF="http://www.zubiaga.org/publications/files/newsgathering-iui2013.pdf">Get paper in PDF</A>.
 
 <p><b>2012</b></p>
 
 <p>
 "Semantics-Based Machine Translation with Hyperedge Replacement 
-Grammars," (B. Jones, J. Andreas, D. Bauer, K-M. Hermann,
+Grammars" (B. Jones, J. Andreas, D. Bauer, K-M. Hermann,
 and K. Knight), Proc. COLING, 2012.
 <A HREF="http://www.aclweb.org/anthology/C12-1083.pdf">Get paper in PDF</A>.
 
 <p>
-"Towards Probabilistic Acceptors and Transducers for Feature Structures,"
+"Towards Probabilistic Acceptors and Transducers for Feature Structures"
 (D. Quernheim and K. Knight), Proc. ACL SSST Workshop, 2012.
 <A HREF="http://www.aclweb.org/anthology/W/W12/W12-4209.pdf">Get paper in PDF</A>.
 
 <p>
-"DAGGER: A Toolkit for Automata on Directed Acyclic Graphs,"
+"DAGGER: A Toolkit for Automata on Directed Acyclic Graphs"
 (D. Quernheim and K. Knight), Proc. FSMNLP, 2012.
 <A HREF="http://www.aclweb.org/anthology/W12-6207">Get paper in PDF</A>.
 
 <p>
-"Large Scale Decipherment for Out-of-Domain Machine Translation,"
+"Large Scale Decipherment for Out-of-Domain Machine Translation"
 (Q. Dou and K. Knight), Proc. EMNLP, 2012.
 <A HREF="http://www.aclweb.org/anthology/D/D12/D12-1025.pdf">Get paper in PDF</A>.
 
 <p>
-"Decoding Running Key Ciphers,"
+"Decoding Running Key Ciphers"
 (S. Reddy and K. Knight), Proc. ACL, Short Paper, 2012.
 <A HREF="http://www.aclweb.org/anthology/P/P12/P12-2016.pdf">Get paper in PDF</A>.
 
 <p>
-"The Secrets of the Copiale Cipher,"
+"The Secrets of the Copiale Cipher"
 (K. Knight, B. Megyesi, and C. Schaefer), Journal of
 Research into Freemasonry and Fraternalism, 2(2), 2012.
 
 <p><b>2011</b></p>
 
 <p>
-"Deciphering Foreign Language,"
+"Deciphering Foreign Language"
 (S. Ravi and K. Knight), Proc. ACL, 2011.
 <A HREF="http://www.aclweb.org/anthology/P/P11/P11-1002.pdf">Get paper in PDF</A>.
 
 <p>
-"Bayesian Inference for Zodiac and Other Homophonic Ciphers,"
+"Bayesian Inference for Zodiac and Other Homophonic Ciphers"
 (S. Ravi and K. Knight), Proc. ACL, 2011.
 <A HREF="http://www.aclweb.org/anthology/P/P11/P11-1025.pdf">Get paper in PDF</A>.
 
 <p>
-"Unsupervised Discovery of Rhyme Schemes,"
+"Unsupervised Discovery of Rhyme Schemes"
 (S. Reddy and K. Knight), Proc. ACL, 2011.
 <A HREF="http://www.aclweb.org/anthology/P/P11/P11-2014.pdf">Get paper in PDF</A>.
 
 <p>
-"What We Know About the Voynich Manuscript,"
+"What We Know About the Voynich Manuscript"
 (S. Reddy and K. Knight), Proc. ACL Workshop on Language Technology
 for Cultural Heritage, Social Sciences, and Humanities (LaTeCH), 2011.
 <A HREF="http://www.aclweb.org/anthology/W11-1511">Get paper in PDF</A>.
 
 <p>
-"The Copiale Cipher,"
+"The Copiale Cipher"
 (K. Knight, B. Megyesi, and C. Schaefer), part of invited talk
 at ACL Workshop on Building and Using Comparable Corpora (BUCC), 2011.
 <A HREF="http://www.aclweb.org/anthology/W/W11/W11-1202.pdf">Get paper in PDF</A>.
@@ -1276,7 +1276,7 @@ in Natural Language Processing, 1999.
 Computational Linguistics, 24(4), 1998.
 <A HREF="http://www.aclweb.org/anthology/J/J98/J98-4003.pdf">Get paper in PDF</A>.
 
-<P>"Translation with Finite-State Devices," (K. Knight and Y. Al-Onaizan),
+<P>"Translation with Finite-State Devices" (K. Knight and Y. Al-Onaizan),
 Proceedings of the 4th AMTA Conference, 1998.
 <A HREF="papers/mt-wfst.ps">Get paper in PostScript.</A>
 </P>
