--- a/index.html
+++ b/index.html
@@ -139,9 +139,15 @@ in Denver.
 
 <p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
 
+ <p>No people call me the space cowboy.</P>
+ 
 <p> 
 Bayesian Inference with Tears:
 <A HREF="papers/bayes-with-tears.pdf">get tutorial workbook in PDF</A>.
+ 
+<p>
+Aerial view of <A HREF="pictures/capa-de-algas.jpg">Capa de Algas</A>
+ </p>
 
 <p> The <A HREF="http://stp.lingfil.uu.se/~bea/copiale">Copiale cipher</A>.
 </p>
