--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Bayesian Inference with Tears:
 <A HREF="papers/bayes-with-tears.pdf">get tutorial workbook in PDF</A>.
  
 <p>
-Aerial view of <A HREF="pictures/capa-de-algas.jpg">Capa de Algas</A>
+Aerial view of <A HREF="pictures/capa-de-algas.jpg">Capa de Algas</A>.
  </p>
 
 <p> The <A HREF="http://stp.lingfil.uu.se/~bea/copiale">Copiale cipher</A>.
