--- a/index.html
+++ b/index.html
@@ -46,30 +46,7 @@ and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?i
 -->
  
 <p>
-I recently wrote a <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
-
-<!--
-<p>
- <a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&amp;psc=1">
-  <img WIDTH=100 src="mk-cover-pg.jpg"></a>
-&nbsp; &nbsp;
- <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&amp;psc=1&amp;smid=ATVPDKIKX0DER">
-  <img WIDTH=150 src="it-li-final.jpeg"></a>
-
-<p>
-(Plus auxiliary sites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
-
-
-<p>
-<a href="math-kook-sample-chapters.pdf">Sample chapters</a> from MATH KOOK.
-
- 
-<p>
-If you don't want to read this whole webpage, here's a quick
-<A HREF="pictures/kk-cloud.png">
-summary</A>.
-</p>
--->
+I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
 
 <p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
@@ -244,9 +221,9 @@ translation glossary</A> for those in the field.</p>
 <P> Don't click <A HREF="extra/dont.html">here</A>.
 
 <P> I wrote a 
-<A HREF="pictures/knight-ele.gif">book</A>
+<A HREF="https://a.co/d/cEMLfuF">book</A>
 for little kids, and another 
-<A HREF="pictures/knight-book.gif">book</A>
+<A HREF="https://a.co/d/a4W8IJk">book</A>
 for big kids.
 
 <P> I used to be an Amber freak, a long time ago, and kept myself 
