--- a/index.html
+++ b/index.html
@@ -33,17 +33,6 @@ My <a href="#pubs">publications</a>.
 My <A HREF="vita/CV_Knight.pdf">
 vita</A>.
 </P>
-
-<!--
-
-<p>
-New books for you:
-<a href="https://www.amazon.com/gp/product/B0B92QRT3D/ref=ox_sc_saved_image_1?smid=A1Y53T3O3Q25L8&psc=1">Math Kook</a>
-and <a href="https://www.amazon.com/gp/product/B0B92HRJWG/ref=crt_ewc_img_dp_1?ie=UTF8&psc=1&smid=ATVPDKIKX0DER">In Theory</a>.
- (Associated websites <a href="https://math-kook-book.github.io">here</a> and <a href="https://in-theory-originals.github.io/">here</a>.)
-</p>
-
--->
  
 <p>
 I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
@@ -1268,8 +1257,10 @@ Proceedings of the 4th AMTA Conference, 1998.
 "Generation that Exploits Corpus-based Statistical Knowledge"
 (I. Langkilde and K. Knight), Proc. of the
 Conference of the Association for Computational Linguistics (COLING/ACL), 1998.
+ <B>Test of Time Award.</B>
 <A HREF="http://www.aclweb.org/anthology/P/P98/P98-1116.pdf">Get paper in PDF</A>.
 </P>
+ 
 <P>
 "Translating Names and Technical Terms in Arabic Text"
 (B. Stalls and K. Knight), Proc of the
@@ -1291,10 +1282,12 @@ International Natural Language Generation Workshop, 1998.
 AI Magazine 18(4), 1997.
 <A HREF="papers/aimag97.pdf">Get paper in PDF.</A>
 </P>
+ 
 <P>
 "Machine Transliteration"
 (K. Knight and J. Graehl), Proc. of the
 Conference of the Association for Computational Linguistics (ACL), 1997.
+  <B>Test of Time Award.</B>
 <A HREF="http://www.aclweb.org/anthology/P/P97/P97-1017.pdf">Get paper in PDF</A>.
 </P>
 
