--- a/inexplicably.html
+++ b/inexplicably.html
@@ -2,7 +2,7 @@
 
 <p>
   <p>
-Back in 2001, I entered the annual Writing Contest held by my local Hermosa Beach, California newspaper (the "Easy Reader").  I submitted this original poem:
+Back in 2001, I entered the annual Writing Contest held by my local Hermosa Beach, California newspaper (the <a href="https://easyreadernews.com/">Easy Reader</a>).  I submitted this original poem:
 
 <p>
 "She stood on the balcony,
