--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 </p>
 
  <p>
+ <a HREF="https://youtu.be/R6lCA9eH1UE">Venice, California.</a>.
+ </p>
+
+ <p>
 The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
 <p>
