--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 </p>
 
  <p>
- <a HREF="https://youtu.be/R6lCA9eH1UE">Venice, California.</a>.
+ <a HREF="https://youtu.be/R6lCA9eH1UE">Venice, California.</a>
  </p>
 
  <p>
