--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ vita</A>.
 </P>
  
 <p>
-I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a> (see <a href="math-kook-sample-chapters.pdf">sample chapters</a>).
-
+I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a> 
+(see <a href="math-kook-sample-chapters.pdf">sample chapters</a>), 
+and an <a href="https://www.amazon.com/dp/B0B92HRJWG">art book</a>.
+ 
 <p>
 We made a nice site about <A HREF="https://chinesenlp.xyz">Chinese NLP</A>!
 We also co-organized a 
@@ -51,12 +53,10 @@ Co-organized IWSLT 2020, co-Program Chair of First <a href="http://aacl2020.org/
 <A HREF="alexa-and-moxie-talking.MP4">Alexa talking to Moxie</A>.
 </p>
 
- <!--
  <p>
- <a HREF="https://youtu.be/R6lCA9eH1UE">Venice, California.</a>
+ <a HREF="doubled-venice-compressed.mp4">Venice, California.</a>
  </p>
--->
- 
+
  <p>
 The infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>!
 
