--- a/index.html
+++ b/index.html
@@ -257,6 +257,12 @@ I think Gary Shteyngart is funny.
 <H2><font size=+6>S</font>elected Publications</H2> 
 (Well, OK, I went ahead and selected them all)
 
+<p><b>2023</b></p>
+
+"Collatz High Cycles Do Not Exist" (K. Knight), <A HREF="https://hal.science/hal-04261183">Get preprint in PDF</A>.
+
+"A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486">Get preprint in PDF</A>.
+ 
 <p><b>Greatest Hits, vol. 1</b></p>
 
 <P>
