--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@ I think Gary Shteyngart is funny.
 <p><b>2023</b></p>
 
 <p>
-"Collatz High Cycles Do Not Exist" (K. Knight), <A HREF="https://hal.science/hal-04261183">Get preprint in PDF</A>.
+"Collatz High Cycles Do Not Exist" (K. Knight), <A HREF="https://hal.science/hal-04261183v1/document">Get preprint in PDF</A>.
 
 <p>
-"A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486">Get preprint in PDF</A>.
+"A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
  
 <p><b>Greatest Hits, vol. 1</b></p>
 
