--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ I think Gary Shteyngart is funny.
 <p>
 "A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
  
-<p><b>Greatest Hits, vol. 1</b></p>
+<p><b><a href="Greatest Hits">pictures/cassette-hits.jpg</a>, vol. 1</b></p>
 
 <P>
 "Connectionist Ideas and Algorithms" Communications of the ACM, 33(11), November, 1990.
