--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="/x-icon" href="favicon.ico">
 </head>
 
 <BODY BGCOLOR="ffffff">
@@ -265,8 +265,10 @@ I think Gary Shteyngart is funny.
 <p>
 "A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
  
-<p><b><a href="Greatest Hits">pictures/cassette-hits.jpg</a>, vol. 1</b></p>
-
+<img src="pictures/cassette-hits.jpg" width="150">
+ 
+<p><b>Greatest Hits, vol. 1</b></p>
+ 
 <P>
 "Connectionist Ideas and Algorithms" Communications of the ACM, 33(11), November, 1990.
 <A HREF="papers/p58-knight.pdf">Get paper in PDF</A>.
@@ -422,7 +424,7 @@ Proc. ACL, 2020.
 
 
 <p>
-"Decipherment of Historical Manuscript Images"
+"Decipherment of Historical Manuscript s"
 (X. Yin, N. Aldarrab, B. Megyesi and K. Knight),
 Proc. ICDAR, 2019.
 <A HREF="https://arxiv.org/abs/1810.04297">Get paper in PDF</A>.
@@ -630,7 +632,7 @@ K. Knight, D. Marcu), Proc. LREC, 2016.
 <A HREF="http://www.lrec-conf.org/proceedings/lrec2016/pdf/581_Paper.pdf">Get paper in PDF</A>.
 
 <p>
-"From Image to Translation: Processing the Endangered Nyushu Script"
+"From  to Translation: Processing the Endangered Nyushu Script"
 (T. Zhang, A. Chowdhury, N. Dhulekar, J. Xia, K. Knight, H. Ji, B. Yener, L. Zhao),
 ACM Transactions on Asian and Low-Resource Language Information Processing, 15(4), 2016.
 <A HREF="http://dl.acm.org/citation.cfm?id=2857052">Get paper in PDF</A>.
