--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ in Denver.
 
 <p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
 
- <p>No people call me the space cowboy.</P>
+<p>No people call me the space cowboy.</P>
  
 <p> 
 Bayesian Inference with Tears:
@@ -131,6 +131,10 @@ Aerial view of <A HREF="pictures/capa-de-algas.jpg">Capa de Algas</A>.
 Listen to the rhythmic 
 <A HREF="extra/crazy3-1.mp3">news gabbler</A> from 
 <A HREF="extra/news-gabbler.html">me and Marjan</A>.  We have thousands of hours!
+</p>
+
+<p>
+Like many people, I sometimes <a href="tangled-up-h.m4a">tape things</a>. 
 </p>
 
 <p>
