--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Listen to the rhythmic
 </p>
 
 <p>
-Like many people, I sometimes <a href="tangled-up-h.m4a">tape things</a>. 
+For obscure reasons, things wind up <a href="tangled-up-h.m4a">on tape</a>. 
 </p>
 
 <p>
