--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@ And here's a gruesome
 for example:
 <A HREF="extra/knight2.html">actual conversations</A> ...
 <A HREF="extra/knight3.html">strange things</A> ...
-<A HREF="extra/knight4.html">parking structures</A> ...
+<A HREF="extra/knight4.html">parking structures</A> 
+<A HREF="https://tofu-buffet.github.io/">...</A>
 <A HREF="extra/knight5.html">werld maps</A>.
 Some fortune-telling 
 <A HREF="invtar/cards.html">
