--- a/index.html
+++ b/index.html
@@ -209,12 +209,13 @@ And here's a gruesome
 for example:
 <A HREF="extra/knight2.html">actual conversations</A> ...
 <A HREF="extra/knight3.html">strange things</A> ...
-<A HREF="extra/knight4.html">parking structures</A> 
-<A HREF="https://tofu-buffet.github.io/">...</A>
+<A HREF="extra/knight4.html">parking structures</A> ...
 <A HREF="extra/knight5.html">werld maps</A>.
 Some fortune-telling 
 <A HREF="invtar/cards.html">
 cards</A>.
+
+<p>I follow the webcomic <A HREF="https://tofu-buffet.github.io/">Tofu Buffet</A>.</p>
 
 <p> A <A HREF="extra/dvl.html">machine 
 translation glossary</A> for those in the field.</p>
