--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@ Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
 If I could change my profession, I would like to try naval attach&eacute. 
+ 
+<p>
+Or if I started a pizza shop, 
+I would name it Ozzie's, and my motto would be "Look on my pizza, ye mighty, and despair!" 
+My pizza would be so good that Dominoes would buy me out, just to shut me down, and round the decay, 
+the lone and level sands would stretch far away.
 
 <p>
 My <A HREF="pictures2/my-busy-robot.mp4">busy robot</a>.
@@ -134,8 +140,7 @@ Listen to the rhythmic
 </p>
 
 <p>
-For obscure reasons, things wind up <a href="tangled-up-h.m4a">on tape</a>. 
-</p>
+<a href="tangled-up-h.m4a">Cassette tape</a> is a good way to store things.
 
 <p>
 I think our approach to syntax in machine translation is best
