--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Say <a href="http://www.history.com/shows/the-hunt-for-the-zodiac-killer">what</
 Here are the <A HREF="extra/seminar-how-to.pdf">guidelines</a>.
 
 <p>
-If I could change my profession, I would like to try naval attach&eacute. Or if I started a pizza shop, 
-I would name it Ozzie's, and my motto would be "Look on my pizza, ye mighty, and despair!" 
+If I could change my profession, I would like to try naval attach&eacute. Or start a pizza shop.
+I would name the shop Ozzie's, and my motto would be "Look on my pizza, ye mighty, and despair!" 
 My pizza would be so good that Dominoes would buy me out, just to shut me down, and round the decay, 
 the lone and level sands would stretch far away.
 
