--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Some fortune-telling
 <A HREF="invtar/cards.html">
 cards</A>.
 
-<p>I follow the webcomic <A HREF="https://tofu-buffet.github.io/">Tofu Buffet</A>.</p>
+<p>I follow the webcomic <A HREF="https://tofu-buffet.github.io/index.html">Tofu Buffet</A>.</p>
 
 <p> A <A HREF="extra/dvl.html">machine 
 translation glossary</A> for those in the field.</p>
