--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@ in Denver.
 <p>Just your average <A HREF="pictures/creepy-face.jpg">face</A>.  Bug reports to <a href="http://static.googleusercontent.com/media/research.google.com/en/us/archive/unsupervised_icml2012.pdf">Google</a>.
 
 <p>No people call me the space cowboy.</P>
+
+<p>A bit of history on <a href="zeks.pdf">advanced research projects</a>
+</p>
  
 <p> 
 Bayesian Inference with Tears:
