--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ in Denver.
 
 <p>No people call me the space cowboy.</P>
 
-<p>A bit of history on <a href="zeks.pdf">advanced research projects</a>
+<p>A bit of history on <a href="zeks.pdf">advanced research projects</a>.
 </p>
  
 <p> 
